--- a/ArdupilotMegaPlanner/ArdupilotMega.csproj
+++ b/ArdupilotMegaPlanner/ArdupilotMega.csproj
@@ -339,9 +339,7 @@
     <Compile Include="Controls\MyButton.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Common.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Common.cs" />
     <Compile Include="ArduinoComms.cs" />
     <Compile Include="Controls\MyLabel.cs">
       <SubType>Component</SubType>
