testing changes to the geoContainment algorithm

--- a/ArdupilotMegaPlanner/ArdupilotMega.csproj
+++ b/ArdupilotMegaPlanner/ArdupilotMega.csproj
@@ -339,7 +339,9 @@
     <Compile Include="Controls\MyButton.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Common.cs" />
+    <Compile Include="Common.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ArduinoComms.cs" />
     <Compile Include="Controls\MyLabel.cs">
       <SubType>Component</SubType>
