--- a/ArdupilotMegaPlanner/ArdupilotMegaVS2012.csproj
+++ b/ArdupilotMegaPlanner/ArdupilotMegaVS2012.csproj
@@ -957,13 +957,21 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>rem macos.bat</PostBuildEvent>
+    <PostBuildEvent>"$(TargetDir)version.exe" "$(TargetPath)" &gt; "$(TargetDir)version.txt"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
+    <PreBuildEvent>cd $(ProjectDir) "C:\Program Files (x86)\Git\bin\git.exe" rev-parse HEAD &gt; "$(ProjectDir)\githash.txt" </PreBuildEvent>
   </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+ <!--
+	<PropertyGroup>
+		<PostBuildEvent>rem macos.bat</PostBuildEvent>
+	  </PropertyGroup>
+	  <PropertyGroup>
+		<PreBuildEvent>
+		</PreBuildEvent>
+	  </PropertyGroup>
+ -->
+ <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
