--- a/ArduPlane/ArduPlane.vcxproj
+++ b/ArduPlane/ArduPlane.vcxproj
@@ -150,8 +150,7 @@ goto :eof
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PreBuildEvent>
-      <Command>
-      </Command>
+      <Command>"C:\Program Files (x86)\Git\bin\git.exe" rev-parse HEAD &gt; githash.h</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='AVR|Win32'">
